# ChangeLog for dev-perl/Net-Netmask
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Net-Netmask/ChangeLog,v 1.50 2012/06/24 12:58:13 tove Exp $

  24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
  Update CPAN upstream info

  21 Apr 2012; Torsten Veller <tove@gentoo.org> -Net-Netmask-1.901.500.ebuild:
  Cleanup

  24 Feb 2012; Brent Baude <ranger@gentoo.org> Net-Netmask-1.901.600.ebuild:
  Marking Net-Netmask-1.901.600 ppc for bug 396937

  12 Feb 2012; Raúl Porcel <armin76@gentoo.org> Net-Netmask-1.901.500.ebuild,
  Net-Netmask-1.901.600.ebuild:
  Drop alpha/ia64/sparc keywords. x86 stable wrt #396937

  03 Feb 2012; Agostino Sarubbo <ago@gentoo.org> Net-Netmask-1.901.600.ebuild:
  Stable for amd64, wrt bug #396937

*Net-Netmask-1.901.600 (23 Mar 2011)

  23 Mar 2011; Torsten Veller <tove@gentoo.org> +Net-Netmask-1.901.600.ebuild:
  Version bump

*Net-Netmask-1.901.500 (26 Feb 2011)

  26 Feb 2011; Torsten Veller <tove@gentoo.org> +Net-Netmask-1.901.500.ebuild,
  -Net-Netmask-1.9015.ebuild:
  Change version scheme. Looks like a downgrade

  18 Feb 2010; Jeremy Olexa <darkside@gentoo.org> Net-Netmask-1.9015.ebuild:
  Add ~arm kw for bug 305631

  21 Jan 2010; Torsten Veller <tove@gentoo.org> Net-Netmask-1.9015.ebuild:
  Ebuild maintenance. EAPI=2. mips -> ~mips. Fix LICENSE: more "as-is" than
  "Artistic"

  30 Sep 2008; Torsten Veller <tove@gentoo.org> -Net-Netmask-1.9012.ebuild,
  -Net-Netmask-1.9013.ebuild, Net-Netmask-1.9015.ebuild:
  Cleanup

  08 Aug 2008; nixnut <nixnut@gentoo.org> Net-Netmask-1.9015.ebuild:
  Stable on ppc wrt bug 214232

  12 May 2007; Joshua Kinard <kumba@gentoo.org> Net-Netmask-1.9015.ebuild:
  Stable on mips.

  05 Mar 2007; Andrej Kacian <ticho@gentoo.org> Net-Netmask-1.9015.ebuild:
  Stable on x86, bug #169152.

  22 Jan 2007; Bryan Østergaard <kloeri@gentoo.org>
  Net-Netmask-1.9015.ebuild:
  Stable on Alpha + IA64.
