@@ -1,4 +1,15 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST Net-Netmask-1.9016.tar.gz 17911 SHA256 76284ee6274f4682f2ec1976da7252c7b9ed0386febfd872009f64c2aeffffa9 SHA512 2d64a857a26615bc002b54403368d4b51af5f1422fa1f8d399794f37f90d82cd205551910444668fc5128df3d8b37cfbd4bc466197641a029470ad74745837ab WHIRLPOOL f4a65992c4c1c949d911c238c1dd96af56bea758efef28a9926b130dbf047cb902723ec3ccfd55142ed5ef4bf8ff4716157ff60203d046a90b3bf1acc0c55055
+EBUILD Net-Netmask-1.901.600-r1.ebuild 462 SHA256 e5ed163069222753740d41f77610d6d2214cf3b2a3c7f7fb929880ea8009b25b SHA512 4312d1d0ada0f9c3f9ab18db6ea75a38ea6e98df5de1f53a60babd47f972c3a96bcdc6cfa8d2ac752eaf4c8288b9cd530f64c41e3b3b49e95a6ddc37da848e34 WHIRLPOOL 150e1e7b6ad6a4f6857fe6054110408e4dd7c2f8fc147e635212faf8890d5d65233144a801c5a5cc47cf6f9b2a1c89f8e78eb58f17140425a2ba0a66539c68b8
 EBUILD Net-Netmask-1.901.600.ebuild 440 SHA256 4104860076307ebf0c40b6e2cc998401512e975eafc4f9f12bf6ced729275dce SHA512 e7fff99de83f051597f977bb910e3db6cb1ef98b0f522b91f6f477f82c61c5b49c224351aefe33899fd59f02dc43642016c89ec9c802a160b46069ec294af70a WHIRLPOOL e5e7ab41942ea843381fc7dead402e3b094934397ca016f11d7c927129437ff0ccf4b046d743bcb6c6127d5768e3bde033cd4c429e7a23e5046d30bd488e5ad7
-MISC ChangeLog 5773 SHA256 d27b4c78d00249eb6e407064ea0c2cfbe6373560179956401f84b2c32d7d5231 SHA512 a8c07bda3827ff16336115047ba98dc7378de6f114c98f8d7a43574d2465b524a94ee7cd609df6647c0398b780b58f18219b124d27de57a989b66f37236343bd WHIRLPOOL d87da77ef269d9b16dc0522ecf18bf0c031d73a59488dee01fcee643be67998325c9a802d6c2ca16d250fa0a089f9b0c27e937f70ada954d027a56b1fc7bdeb6
+MISC ChangeLog 5943 SHA256 c6fa52a48f1ab2bc4c63ec6029880f6085c37cd4e171fc23d09f1305652d2398 SHA512 5b1dfac7408ffd8da6a9140fb76a7e591aa4bcce92998320b59b17583c449c2c7c83e8f3f21f61b352ceee7134fef1c5f03f7b975ea41c48ffc247164e053bf7 WHIRLPOOL 851c003d17bb09fe8e1c3878bed90bcbdb6cc32f84884c588a5e7cc064d6a55c506621cf5d182c7e966f0e7c9e0c4b6ee3eedbdbc0d8f218cbca238ecc9c776c
 MISC metadata.xml 296 SHA256 e5af491c571dd9d14691bd158c0cc949743293c9041f90c491f8e5f0b61bb2da SHA512 329e5029cf0cb621870bb93da6a71c396dc9ac27762ef45a91746107ba32687039a84ff7e5ed3d3ba5ef4912a0f5a6e3b36abcaa0d071daba497f5cda043718e WHIRLPOOL 57cf177a00455d15d7ab4ebdbf644e38f47f56a565d9f2e8da0f809e9bdeac7f2597aaf012c800a562a718425d518e5a47707d89b2b067e808051f6c80f46844
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iEYEAREIAAYFAlIx57wACgkQso7CE7gHKw0SmgCghKp7bJt014WZ4CUGw492rkzR
+Il8AoNBm9paL9Z74o9ZeUIVC01IAnzE3
+=uw8E
+-----END PGP SIGNATURE-----
