@@ -1,0 +1,18 @@
+# Copyright 1999-2013 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Net-Netmask/Net-Netmask-1.901.600-r1.ebuild,v 1.1 2013/09/12 16:11:29 idella4 Exp $
+
+EAPI=5
+
+MODULE_AUTHOR=MUIR
+MODULE_SECTION=modules
+MODULE_VERSION=1.9016
+inherit perl-module
+
+DESCRIPTION="Parse, manipulate and lookup IP network blocks"
+
+SLOT="0"
+KEYWORDS="~amd64 ~arm ~mips ~ppc ~x86"
+IUSE=""
+
+SRC_TEST="do"
