@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/Net-Netmask
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Net-Netmask/ChangeLog,v 1.50 2012/06/24 12:58:13 tove Exp $
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Net-Netmask/ChangeLog,v 1.51 2013/09/12 16:11:29 idella4 Exp $
+
+*Net-Netmask-1.901.600-r1 (12 Sep 2013)
+
+  12 Sep 2013; Ian Delaney <idella4@gentoo.org>
+  +Net-Netmask-1.901.600-r1.ebuild:
+  revbump -> EAPI 5, add test invocation
 
   24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
   Update CPAN upstream info
